いろいろ対策をした。

--- a/llvm/module.cache/CMakeLists.txt
+++ b/llvm/module.cache/CMakeLists.txt
@@ -16,8 +16,10 @@ get_target_property(compile_flags llvm-config COMPILE_FLAGS)
 get_target_property(compile_options llvm-config COMPILE_OPTIONS)
 list(JOIN compile_options " " compile_options)
 
-set(LLVM_SCAN_DEPS /home/chapuni/llvm/install/2libcxx/bin/clang-scan-deps)
+set(LLVM_SCAN_DEPS /home/admin/llvm/install/2libcxx/bin/clang-scan-deps)
 set(cmake_to_generate ${CMAKE_CURRENT_BINARY_DIR}/modules.cmake)
+
+string(TOUPPER "${CMAKE_BUILD_TYPE}" build_type_toupper)
 
 execute_process(
   COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/genmodules.py
@@ -28,7 +30,7 @@ execute_process(
   ${LLVM_SCAN_DEPS}
   ${LLVM_DEFINITIONS}
   ${includes}
-  ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} ${compile_flags} ${compile_options} ${CMAKE_CXX${CMAKE_CXX_STANDARD}_STANDARD_COMPILE_OPTION}
+  ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_${build_type_toupper}} ${compile_flags} ${compile_options} ${CMAKE_CXX${CMAKE_CXX_STANDARD}_STANDARD_COMPILE_OPTION}
 
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   RESULT_VARIABLE result
