--- a/llvm/unittests/Support/DynamicLibrary/CMakeLists.txt
+++ b/llvm/unittests/Support/DynamicLibrary/CMakeLists.txt
@@ -8,7 +8,9 @@ add_library(DynamicLibraryLib STATIC
   )
 set_target_properties(DynamicLibraryLib PROPERTIES FOLDER "Tests")
 
-target_compile_options(DynamicLibraryLib PRIVATE -fno-modules -Wno-unused-command-line-argument)
+if (LLVM_ENABLE_MODULES)
+  target_compile_options(DynamicLibraryLib PRIVATE -fno-modules -Wno-unused-command-line-argument)
+endif()
 
 # extract_symbols.py relies on all its library arguments being in the same
 # directory, so we must set the output directory in the same way as if
