--- a/llvm/tools/llvm-exegesis/CMakeLists.txt
+++ b/llvm/tools/llvm-exegesis/CMakeLists.txt
@@ -4,7 +4,9 @@ set(LLVM_LINK_COMPONENTS
   native
   )
 
-add_compile_options(-fmodules-ignore-macro=LLVM_EXEGESIS_INITIALIZE_NATIVE_TARGET)
+if (LLVM_ENABLE_MODULES)
+  add_compile_options(-fmodules-ignore-macro=LLVM_EXEGESIS_INITIALIZE_NATIVE_TARGET)
+endif()
 
 add_llvm_tool(llvm-exegesis
   DISABLE_LLVM_LINK_LLVM_DYLIB
