--- a/llvm/utils/unittest/CMakeLists.txt
+++ b/llvm/utils/unittest/CMakeLists.txt
@@ -63,7 +63,9 @@ endif()
 
 # Gtest 1.8.0 uses tr1/tuple which is deprecated on MSVC, so we force it off.
 target_compile_definitions(gtest PUBLIC GTEST_HAS_TR1_TUPLE=0)
-target_compile_options(gtest PUBLIC -fmodules-ignore-macro=GTEST_HAS_TR1_TUPLE)
+if (LLVM_ENABLE_MODULES)
+  target_compile_options(gtest PUBLIC -fmodules-ignore-macro=GTEST_HAS_TR1_TUPLE)
+endif()
 
 if (NOT LLVM_ENABLE_THREADS)
   target_compile_definitions(gtest PUBLIC GTEST_HAS_PTHREAD=0)
