--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -925,6 +925,9 @@ endif()
 set(LLVM_ENABLE_TABLEGEN_MODULARIZED OFF)
 
 ##############################################################################
+set(CLANG_SCAN_DEPS /home/chapuni/llvm/install/2libcxx/bin/clang-scan-deps
+  CACHE FILEPATH "clang-scan-deps")
+
 if (LLVM_ENABLE_MODULES)
   set(anchor_h ${CMAKE_BINARY_DIR}/include/stub_anchor.h)
 
@@ -939,7 +942,7 @@ if (LLVM_ENABLE_MODULES)
   #list(APPEND LLVM_COMMON_DEPENDS anchor_all)
 
   set(CMAKE_CXX_EXPERIMENTAL_PRESCANNER
-    "/home/chapuni/llvm/install/2libcxx/bin/clang-scan-deps --mode=preprocess-minimized-sources -j=1 --reuse-filemanager --format=ninja"
+    ${CLANG_SCAN_DEPS} --mode=preprocess-minimized-sources -j=1 --reuse-filemanager --format=ninja
     )
 endif()
 ##############################################################################
