llvm-tblgen 完全に分解した。

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -1,16 +1,42 @@
 set(LLVM_ENABLE_TABLEGEN_MODULARIZED ON)
 
 add_tablegen(llvm-tblgen LLVM
-  Attributes.cpp
-  DirectiveEmitter.cpp
-  OptEmitter.cpp
-  OptParserEmitter.cpp
-  OptRSTEmitter.cpp
   TableGen.cpp
+
+  MODULE attrs
+  Attributes.cpp
+
+  MODULE ctags
   CTagsEmitter.cpp
 
   MODULE exegesis
   ExegesisEmitter.cpp
+
+  MODULE opt-rst
+  OptEmitter.cpp
+  OptRSTEmitter.cpp
+  SHARED
+
+  MODULE opt-parser-defs
+  OptParserEmitter.cpp
+  DEPENDS opt-rst
+
+  MODULE directive-decl
+  DirectiveEmitter.cpp
+  GenDirectivesEnumDecl.cpp
+  SHARED
+
+  MODULE directive-gen
+  GenDirectivesEnumGen.cpp
+  DEPENDS directive-decl
+
+  MODULE directive-impl
+  GenDirectivesEnumImpl.cpp
+  DEPENDS directive-decl
+
+  MODULE automata
+  DFAEmitter.cpp
+  SHARED
 
   MODULE intrinsic-enums
   CodeGenIntrinsics.cpp
@@ -18,75 +44,71 @@ add_tablegen(llvm-tblgen LLVM
   SDNodeProperties.cpp
   SHARED
 
+  MODULE searchable-tables
+  SearchableTableEmitter.cpp
+  DEPENDS intrinsic-enums
+
   MODULE intrinsic-impl
   EmitLongStrLiterals.cpp
   IntrinsicImplEmitter.cpp
   DEPENDS intrinsic-enums
   SHARED
 
-  MODULE searchable-tables
-  SearchableTableEmitter.cpp
-  DEPENDS intrinsic-enums
-
-  MODULE automata
-  DFAEmitter.cpp
-  SHARED
-
-  MODULE x86-EVEX2VEX-tables
+  MODULE callingconv
+  CallingConvEmitter.cpp
   CodeGenHwModes.cpp
   CodeGenInstruction.cpp
   CodeGenRegisters.cpp
   CodeGenSchedule.cpp
   CodeGenTarget.cpp
   InfoByHwMode.cpp
-  X86EVEX2VEXTablesEmitter.cpp
   DEPENDS intrinsic-enums
   SHARED
 
-  MODULE callingconv
-  CallingConvEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
-
-  MODULE x86-fold-tables
-  X86FoldTablesEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  MODULE x86-EVEX2VEX-tables
+  X86EVEX2VEXTablesEmitter.cpp
+  DEPENDS callingconv
 
   MODULE pseudo-lowering
   PseudoLoweringEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
+
+  MODULE x86-fold-tables
+  X86FoldTablesEmitter.cpp
+  DEPENDS callingconv
 
   MODULE register-bank
   RegisterBankEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
 
   MODULE compress-inst-emitter
   RISCVCompressInstEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
 
   MODULE dfa-packetizer
   DFAPacketizerEmitter.cpp
-  DEPENDS automata x86-EVEX2VEX-tables
+  DEPENDS automata callingconv
 
   MODULE emitter
   CodeEmitterGen.cpp
   SubtargetFeatureInfo.cpp
   Types.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
   SHARED
+
+  MODULE register-info
+  RegisterInfoEmitter.cpp
+  DEPENDS emitter intrinsic-impl
 
   MODULE subtarget
   PredicateExpander.cpp
   SubtargetEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
   SHARED
 
   MODULE asm-writer
   AsmWriterEmitter.cpp
   AsmWriterInst.cpp
-  DEPENDS emitter intrinsic-impl
-
-  MODULE register-info
-  RegisterInfoEmitter.cpp
   DEPENDS emitter intrinsic-impl
 
   MODULE asm-matcher
@@ -100,12 +122,12 @@ add_tablegen(llvm-tblgen LLVM
   X86DisassemblerTables.cpp
   X86ModRMFilters.cpp
   X86RecognizableInstr.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
 
   MODULE instr-docs
   CodeGenDAGPatterns.cpp
   InstrDocsEmitter.cpp
-  DEPENDS x86-EVEX2VEX-tables
+  DEPENDS callingconv
   SHARED
 
   MODULE fast-isel
@@ -116,6 +138,10 @@ add_tablegen(llvm-tblgen LLVM
   CodeGenMapTable.cpp
   InstrInfoEmitter.cpp
   DEPENDS instr-docs intrinsic-impl subtarget
+
+  MODULE global-isel
+  GlobalISelEmitter.cpp
+  DEPENDS emitter instr-docs
 
   MODULE dag-isel
   DAGISelEmitter.cpp
@@ -135,13 +161,10 @@ add_tablegen(llvm-tblgen LLVM
   GlobalISel/GIMatchDagPredicate.cpp
   GlobalISel/GIMatchDagPredicateDependencyEdge.cpp
   GlobalISel/GIMatchTree.cpp
-  DEPENDS x86-EVEX2VEX-tables
-  SHARED
-
-  MODULE global-isel
-  GlobalISelEmitter.cpp
-  DEPENDS emitter instr-docs
+  DEPENDS callingconv
   ) # add_tablegen
 set_target_properties(llvm-tblgen PROPERTIES FOLDER "Tablegenning")
 
-add_library(LLVMTableGenGlobalISel ALIAS llvm-tblgen-global-isel-combiner)
+if (LLVM_ENABLE_TABLEGEN_MODULARAIZED)
+  add_library(LLVMTableGenGlobalISel ALIAS llvm-tblgen-global-isel-combiner)
+endif()
