--- a/libcxx/include/CMakeLists.txt
+++ b/libcxx/include/CMakeLists.txt
@@ -193,6 +193,16 @@ configure_file("__config_site.in"
 
 # Generate a custom __config header. The new header is created
 # by prepending __config_site to the current __config header.
+execute_process(
+  COMMAND ${Python3_EXECUTABLE} ${LIBCXX_SOURCE_DIR}/utils/cat_files.py
+    ${LIBCXX_BINARY_DIR}/__config_site
+    ${LIBCXX_SOURCE_DIR}/include/__config
+    -o ${LIBCXX_BINARY_DIR}/include/__config
+  OUTPUT_FILE ${LIBCXX_BINARY_DIR}/include/__config
+  )
+
+# Generate a custom __config header. The new header is created
+# by prepending __config_site to the current __config header.
 add_custom_command(OUTPUT ${LIBCXX_BINARY_DIR}/__generated_config
   COMMAND ${Python3_EXECUTABLE} ${LIBCXX_SOURCE_DIR}/utils/cat_files.py
     ${LIBCXX_BINARY_DIR}/__config_site
