--- a/llvm/projects/CMakeLists.txt
+++ b/llvm/projects/CMakeLists.txt
@@ -32,8 +32,10 @@ if(${LLVM_BUILD_RUNTIME})
     add_llvm_external_project(libunwind)
     add_llvm_external_project(pstl)
     add_llvm_external_project(libc)
-    add_llvm_external_project(libcxxabi)
-    add_llvm_external_project(libcxx)
+    #if (NOT LLVM_BUILD_WITH_HOST_RUNTIME)
+      add_llvm_external_project(libcxxabi)
+      add_llvm_external_project(libcxx)
+    #endif()
   endif()
   if(NOT LLVM_BUILD_EXTERNAL_COMPILER_RT)
     add_llvm_external_project(compiler-rt)
