--- a/libcxx/CMakeLists.txt
+++ b/libcxx/CMakeLists.txt
@@ -21,6 +21,14 @@ set(CMAKE_MODULE_PATH
 
 set(CMAKE_FOLDER "libc++")
 
+# set(CMAKE_CXX_FLAGS)
+set_directory_properties(PROPERTIES
+#   COMPILE_DEFINITIONS ""
+#   COMPILE_OPTIONS "-nostdinc++;-Wno-user-defined-literals"
+INCLUDE_DIRECTORIES ""
+#   LINK_OPTIONS ""
+)
+
 set(LIBCXX_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})
 set(LIBCXX_BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR})
 set(LIBCXX_BINARY_INCLUDE_DIR "${LIBCXX_BINARY_DIR}/include/c++build")
