--- a/clang/lib/DirectoryWatcher/CMakeLists.txt
+++ b/clang/lib/DirectoryWatcher/CMakeLists.txt
@@ -16,6 +16,8 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
   if(HAVE_INOTIFY)
     list(APPEND DIRECTORY_WATCHER_SOURCES linux/DirectoryWatcher-linux.cpp)
     find_package(Threads REQUIRED)
+  else()
+    message(FATAL_ERROR "<sys/inotify.h> ???")
   endif()
 elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
   list(APPEND DIRECTORY_WATCHER_SOURCES windows/DirectoryWatcher-windows.cpp)
