TableGenTests: Prepend LLVMTableGen when LLVM_ENABLE_TABLEGEN_MODULARIZED
LLVMTableGen.so implies LLVMSupportLite, and also LLVMSupport.a implies LLVMSupportLite.
As a trick, prepend LLVMTableGen.so to hide LLVMSupport.a

FIXME: Tweak link_libs when other issues would happen.
For now, this is the only case that LLVMTableGen and LLVMSupport clash.

--- a/llvm/unittests/TableGen/CMakeLists.txt
+++ b/llvm/unittests/TableGen/CMakeLists.txt
@@ -14,3 +14,9 @@ add_llvm_unittest(TableGenTests
   )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../utils/TableGen)
 target_link_libraries(TableGenTests PRIVATE LLVMTableGenGlobalISel LLVMTableGen)
+
+# Prepend LLVMTableGen
+# FIXME: Tweak link_libs when other issues would happen.
+if(TARGET llvm-tblgen-automata)
+  target_link_options(TableGenTests PRIVATE "$<TARGET_LINKER_FILE:LLVMTableGen>")
+endif()
