--- a/llvm/unittests/TableGen/CMakeLists.txt
+++ b/llvm/unittests/TableGen/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(LLVM_LINK_COMPONENTS
-  TableGen
-  )
-
 set(LLVM_TARGET_DEFINITIONS Automata.td)
 
 tablegen(LLVM AutomataTables.inc -gen-searchable-tables)
@@ -13,10 +9,5 @@ add_llvm_unittest(TableGenTests
   AutomataTest.cpp
   )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../utils/TableGen)
-target_link_libraries(TableGenTests PRIVATE LLVMTableGenGlobalISel LLVMTableGen)
 
-# Prepend LLVMTableGen
-# FIXME: Tweak link_libs when other issues would happen.
-if(TARGET llvm-tblgen-automata)
-  target_link_options(TableGenTests PRIVATE "$<TARGET_LINKER_FILE:LLVMTableGen>")
-endif()
+target_link_libraries(TableGenTests PRIVATE LLVMTableGenGlobalISel)
